fixed layout bug (print) for annotation in use-cases

--- a/documentation/_layout/print.css
+++ b/documentation/_layout/print.css
@@ -220,8 +220,6 @@ span.up-annotation {
 	color: #ff8c00;
 	padding: 2px 0.5em;
 	display: block;
-	margin-left: -6px;
-	margin-right: -6px;
 	margin-bottom: 3px;
 }
 
